# JustRasterizer

./: Application.cpp  CMakeLists.txt  README.md
Common/: FragmenShader.h  Loader.h  Model.h  Object.h  Shader.h  Texture.h  Vertex.h  VertexShader.h
Include/JustMath/: Global.h  Math.h  Matrix.h  Transform.h  Vector.h
Include/TGA/: tgaimage.cpp
Math/: Global.h  Math.h  Matrix.h  Transform.h  Vector.h
Model/: ConvKernel.h  Model.h  Texture.cpp  Texture.h  Vertex.h
Object/: Model.cpp  Model.h
Renderer/: Camera.h  Film.cpp  Film.h  Renderer.cpp  Renderer.h  Scene.h
Shader/: BlinnPhongShader.cpp  DefaultFragmentShader.cpp  DefaultFragmentShader.h  DefaultShader.cpp  DefaultVertexShader.cpp  DefaultVertexShader.h  Light.h  Shader.h
